--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,32 @@
-<html>Welcome!!</html>
+<!DOCTYPE html>
+<html>
+
+<head>
+<style>
+body {
+    background: -webkit-linear-gradient(left, lightgrey, lightgrey 50%, white 50%, white); not my code
+
+}
+h1 {
+    color: pink;
+    text-align: center;
+    font-size: 50px
+}
+
+p {
+    font-family: georgia;
+    font-size: 25px;
+}
+</style>
+</head>
+
+<title>Orli Rein</title>
+</head>
+
+<body>
+
+<h1>My Life</h1>
+<p>My name is Orli. I am 17 years old and a rising senior in high school. I am the youngest child in my immediate family. I love spending time with friends and am a huge foodie. </p>
+
+</body>
+</html>
