--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@ p {
 <body>
 
 <h1>My Life</h1>
-<p>My name is Orli. I am 17 years old and a rising senior in high school. I am the youngest child in my immediate family. I love spending time with friends and am a huge foodie. </p>
+<p>My name is Orli. I am 17 years old and a rising senior in high school. Based on what I've learned so far in Girls Who Code, I have noticed many parallels between Scratch and Python. Scratch is a simpler version of code, and I find the same with Python because they are both very easy to understand. Additionally, they are both color coded which makes the code easier to read. While there are many similarities, I have notices certain qualities that make the two programs very different. For example, in Python, you must build everything yourself by writing in code what you want the computer todo, unlike Scratch where there are blocks that are pre-written. v</p>
 
 </body>
 </html>
