--- a/aboutme.html
+++ b/aboutme.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en-US">
+ <head>
 
-<head>
-<style>
-body {
-    background: -webkit-linear-gradient(left, lightgrey, lightgrey 50%, white 50%, white); not my code
+<img src="pics.jpg">
 
-}
-h1 {
-    color: pink;
-    text-align: center;
-    font-size: 50px
-}
+ <title>aboutme.html</title>
+ <link rel = "stylesheet"
+   type = "text/css"
+   href = "homepage.css" />
 
-p {
-    font-family: georgia;
-    font-size: 25px;
-}
-</style>
-</head>
 
-<title>Orli Rein</title>
-</head>
+  <a href="file:///C:/Users/GWC/Desktop/classthoughts.html">class thoughts</a>
 
-<body>
 
-<h1>My Life</h1>
-<p>My name is Orli. I am 17 years old and a rising senior in high school. Based on what I've learned so far in Girls Who Code, I have noticed many parallels between Scratch and Python. Scratch is a simpler version of code, and I find the same with Python because they are both very easy to understand. Additionally, they are both color coded which makes the code easier to read. While there are many similarities, I have notices certain qualities that make the two programs very different. For example, in Python, you must build everything yourself by writing in code what you want the computer todo, unlike Scratch where there are blocks that are pre-written. v</p>
+  <body>
+  <h1>About me</h1>
+  <p>
+  Welcome to my page!
+  </p>
+  <p>
+My name is Orli and I am 17.
+  </p>
+  </body>
 
-</body>
-</html>
+ <img src="untitled design.jpg" width="42" height="42" align="right">
+ </html>
+
